@@ -85,6 +85,7 @@ Template for new versions:
 - ``dfhack.military.removeFromSquad``: Lua API for ``Military::removeFromSquad``
 - ``gui.dwarfmode``: adventure mode cursor now supported in ``getCursorPos``, ``setCursorPos``, and ``clearCursorPos`` funcitons
 - ``dfhack.buildings.checkFreeTiles``: now replaces the extents parameter for a building pointer
+- ``overlay.isOverlayEnabled``: new API for querying whether a given overlay is enabled
 
 ## Removed
 
